config selenum