@@ -10,6 +10,7 @@ import org.springframework.boot.test.context.SpringBootTest;
 import javax.transaction.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -32,9 +33,8 @@ class TenantRepositoryImplTest {
             Tenant tenant = new Tenant(new TenantDescription("bob" + i));
             tenantRepository.save(tenant);
         }
-        List<Tenant> tenants = tenantRepository.findByName("bob", 10, 20).toList();
+        List<Tenant> tenants = tenantRepository.findByName("bob", 10, 20).collect(Collectors.toList());
         assertEquals(10, tenants.size());
-        System.out.println(tenants.get(0).getClass());
         assertEquals("bob10", tenants.get(0).getDescription().getName());
     }
 }
